# notepad

./: Cargo.toml  Makefile  README.md  notepad.desktop
src/: app.rs  editor_view.rs  file_io.rs  find_replace.rs  line_numbers.rs  main.rs  shortcuts.rs  status_bar.rs  tab.rs  undo.rs
src/theme/: config.rs  dialog.rs  mod.rs
